--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ h2{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: none;
+    outline:none;
 }
 header{
+    position: sticky;
+    top: 0%;
     width: 100%;
     height: 60px;
-    background-color:#8e44ad ;
+    background-color:rgb(11, 119, 186) ;
 }
 #logo{
     float: left;
